# IronShield

./: .editorconfig  .gitignore  Cargo.toml  GITHUB_ACTION_SETUP.md  HIRING.md  LICENSE.BSL  LICENSE.md  README.md  STRUCTURE.md  Worker-rs-docs.md  build.js  cloudflare-workers-docs.mdx  improvements.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: deploy.yml
assets/: api_client.js  challenge.css  challenge_main.js  challenge_template.html  pow_worker.js  ui_manager.js  wasm_pow_worker.js  worker_pool_manager.js
assets/wasm/: ironshield_wasm.js  ironshield_wasm_bg.wasm
ironshield-cloudflare/: Cargo.toml
ironshield-cloudflare/src/: asset.rs  bypass.rs  challenge.rs  constant.rs  cors.rs  difficulty.rs  header.rs  http_handler.rs  lib.rs  mod.rs
ironshield-cloudflare/src/header/: challenge_header.rs  mod.rs  response_header.rs  token_header.rs  util.rs
ironshield-core/: Cargo.toml
ironshield-core/src/: lib.rs
ironshield-types/src/: challenge.rs
ironshield-wasm/src/: lib.rs
pow-worker-test/: .gitignore  Cargo.toml  build.js  wrangler.toml
pow-worker-test/assets/: api_client.js  challenge_main.js  challenge_template.html  pow_worker.js
pow-worker-test/src/: challenge_template.html  lib.rs  pow_client.rs
