[package]
name = "ironshield"
version = "0.1.0"
edition = "2021"
authors = [ "ebosspc <software2070@protonmail.com>" ]
description = "Enterprise-Grade Edge-native L7 DDoS & Bot Firewall with Stateless PoW, Bot Fingerprinting, and Origin-Shielding Scraper Defense, Written in Rust"
repository = "" # TODO: Add GitHub repository URL
license = "BUSL-1.1" # Becomes Apache-2.0 after 2028-07-24

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lib]
crate-type = ["cdylib"]
path = "ironshield-cloudflare/src/lib.rs"

[dependencies]
# Workspace members
ironshield-core = { path = "./ironshield-core" }

# Default Axum template dependencies
axum = { version = "0.7", default-features = false }
axum-macros = "0.4"
console_error_panic_hook = "0.1.7"
http = "1.0" # Make sure this is 1.0 or compatible
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
worker = { version = "0.5.0", features = ["http", "axum"] }
serde-wasm-bindgen = "0.6.0"

# IronShield PoW dependencies
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[profile.release]
# Optimize for size in release builds
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[workspace]
members = [
    "ironshield-core",
    "ironshield-wasm"
]
